embedding css via ssi include instead of linking in html

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -2,12 +2,13 @@
 <head>
 <title>metro mobile</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+<style type="text/css">
+<!--#include virtual="tripplanner.css" -->
+</style>
 <script type="text/javascript" language="Javascript">
 <!--#include virtual="tripplanner.js" -->
 <!--#include virtual="geo.js" -->
-
 </script>
-<link href="tripplanner.css" rel="stylesheet" type="text/css" />
 <link rel="apple-touch-icon" href="logo.png" />
 </head><body onLoad="updatepage();">
 
