--- a/preferences.html
+++ b/preferences.html
@@ -2,10 +2,12 @@
 <head>
 <title>metro mobile: preferences</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+<style type="text/css">
+<!--#include virtual="tripplanner.css" -->
+</style>
 <script type="text/javascript" language="Javascript">
 <!--#include virtual="preferences.js" -->
 </script>
-<link href="tripplanner.css" rel="stylesheet" type="text/css" />
 <link rel="apple-touch-icon" href="logo.png" />
 </head>
 <body onLoad="updatepage();">
