embedded logo as data uri

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -12,7 +12,7 @@
 <link rel="apple-touch-icon" href="logo.png" />
 </head><body onLoad="updatepage();">
 
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="logo.png" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile</div>
+<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile</div>
 <div style="margin: 0 10px 0 8px;">
 <form name="FormName" action="http://tripplanner.kingcounty.gov/cgi-bin/itin.pl" method="Post" onsubmit="return presubmit();">
 <input type="hidden" name="action" value="entry">
