added date list to pulldown menu

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -58,10 +58,11 @@ time:<br />
 <option value="A" selected="selected">arrive</option>
 <option value="D">depart</option>
 </select><select name="daypull" size="1">
-<option value="wk">weekday</option>
-<option value="sat">saturday</option>
-<option value="sun">sunday</option>
-<option value="sun">holiday</option>
+<option value="t">today</option>
+<option value="m">tomorrow</option>
+<script type="text/javascript" language="Javascript">
+fillday();
+</script>
 </select><select name="fulltime" size="1">
 <script type="text/javascript" language="Javascript">
 filltime();
