some html cleanup

--- a/preferences-modify.html
+++ b/preferences-modify.html
@@ -7,7 +7,7 @@ location to modify:<br />
 </select>
 <br />
 <br />
-<input type="button" value=modify location" onClick="loadmodifyloc();">
+<input type="button" value="modify location" onClick="loadmodifyloc();">
 </form>
 <div style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
