--- a/preferences-tripdefaults.html
+++ b/preferences-tripdefaults.html
@@ -26,9 +26,9 @@ maximum walking:<br /><select name="Walk" onchange="hidesave();">
 </select>
 
 <br />most important:<br /><select name="Min" onchange="hidesave();">
-<option value="T" name="Min" selected="selected">fastest way</option>
-<option value="X" name="Min">fewest transfers</option>
-<option value="W" name="Min">minimal walking</option>
+<option value="T" selected="selected">fastest way</option>
+<option value="X">fewest transfers</option>
+<option value="W">minimal walking</option>
 </select>
 
 <br />accessable trip:<br /><select name="atrpull" onchange="hidesave();">
