--- a/preferences.html
+++ b/preferences.html
@@ -16,11 +16,10 @@
 <!--#include virtual="preferences-delete.html" -->
 <!--#include virtual="preferences-modify.html" -->
 <!--#include virtual="preferences-tripdefaults.html" -->
-<!--#include virtual="preferences-cookiecheck.html" -->
 <div id="genericmodal" class="modalpage" style="display: none;"><div class="modalpopup">
 <span id="generictext"></span>
 <br /><br /><input type="button" value="okay" class="modalokay" onClick="ShowHide('genericmodal');" />
-
+</div></div>
 </body>
 </html>
 
