--- a/tripplanner.html
+++ b/tripplanner.html
@@ -12,7 +12,7 @@
 <link rel="apple-touch-icon" href="logo.png" />
 </head><body onLoad="updatepage();">
 
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile</div>
+<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile</div>
 <div style="margin: 0 10px 0 8px;">
 <form name="FormName" action="http://tripplanner.kingcounty.gov/cgi-bin/itin.pl" method="Post" onsubmit="return presubmit();">
 <input type="hidden" name="action" value="entry">
@@ -86,9 +86,9 @@ maximum walking:<br />
 </select>
 
 <br />most important:<br /><select name="Min">
-<option value="T" name="Min" selected="selected">fastest way</option>
-<option value="X" name="Min">fewest transfers</option>
-<option value="W" name="Min">minimal walking</option>
+<option value="T" selected="selected">fastest way</option>
+<option value="X">fewest transfers</option>
+<option value="W">minimal walking</option>
 </select>
 
 <br />accessable trip:<br /><select name="atrpull">
@@ -101,8 +101,8 @@ maximum walking:<br />
 <div id="genericmodal" class="modalpage" style="display: none;"><div class="modalpopup">
 <span id="generictext"></span>
 <br /><br /><input type="button" value="okay" class="modalokay" onClick="ShowHide('genericmodal');" />
-
-
+</div>
+</div>
 </body>
 </html>
 
