html fiddling, and random display nonsense

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -53,12 +53,12 @@ fillloc();
 </select><br />
 <strong>or</strong> enter an ending address: <br /><input name="destcust" size="25" maxlength="80" /><br />
 
-time:<br />
 <select name="Arr" size="1">
 <option value="A" selected="selected">arrive</option>
 <option value="D">depart</option>
-</select><select name="daypull" size="1">
-<option value="t">today</option>
+</select><br />
+<select name="daypull" size="1">
+<option value="t" selected="selected">today</option>
 <option value="m">tomorrow</option>
 <script type="text/javascript" language="Javascript">
 fillday();
@@ -68,7 +68,7 @@ fillday();
 filltime();
 </script>
 </select>
-<br /><br /><input type="submit"  name="Submit" value="plan trip">
+<br /><input type="submit" name="Submit" value="plan trip" style="font-size:medium">
 
 
 <br /><br />
