--- a/tripplanner.html
+++ b/tripplanner.html
@@ -77,7 +77,7 @@ filltime();
 <div id="optblock" style="DISPLAY: none;">
 <div style="float: left;"><a onclick ="hideadditional();" href="javascript:;" >hide additional options</a></div><div style="float: right;"><a href="preferences.html">preferences</a></div><br /><hr />
 
-maximum walking:<br />
+maximum walking: 
 <select name="Walk">
 <option value=".25"> 0.25 mi</option>
 <option value=".50" selected="selected"> 0.50 mi</option>
@@ -85,13 +85,13 @@ maximum walking:<br />
 <option value="1.0"> 1.00 mi</option>
 </select>
 
-<br />most important:<br /><select name="Min">
+<br />most important: <select name="Min">
 <option value="T" selected="selected">fastest way</option>
 <option value="X">fewest transfers</option>
 <option value="W">minimal walking</option>
 </select>
 
-<br />accessable trip:<br /><select name="atrpull">
+<br />accessable trip: <select name="atrpull">
 <option value="N" selected="selected">no</option>
 <option value="Y">yes</option>
 </select></div>
